# wxj-tui-agent

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_mcp_server.py
agent/: config.py  daily.py  mcp_client.py  memory.py  messages.py  query_engine.py  skills.py
agent/tools/: __init__.py  base.py  bash_tool.py  file_edit_tool.py  file_read_tool.py  file_write_tool.py  glob_tool.py  grep_tool.py
tui/: app.py  dialogs.py  input_bar.py  logo_panel.py  plan_mode.py  views.py
